# wGKernels

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: README.md
benchmarks/cpu/: README.md
benchmarks/cuda/: CMakeLists.txt  README.md  bench_conv2d_torch.py  bench_reduce_torch.py  reduce_benchmark.cu
benchmarks/cutlass/: README.md
benchmarks/simd/: README.md
cmake/: CUDA.cmake  Utils.cmake  Warnings.cmake
cpu/: CMakeLists.txt  README.md
cpu/activation/: CMakeLists.txt  exp.cc  sigmoid.cc  silu.cc
cpu/activation_elementwise/: notes.md
cpu/attention/: CMakeLists.txt  notes.md  self_attention.cc
cpu/convolution/: CMakeLists.txt  conv2d.cc  notes.md
cpu/elementwise/: CMakeLists.txt  add.cc
cpu/embedding_indexing/: CMakeLists.txt  embedding.cc  notes.md
cpu/fused_ops/: notes.md
cpu/gemm/: CMakeLists.txt  notes.md  sgemm.cc
cpu/gemv/: notes.md
cpu/norm/: CMakeLists.txt  batchNorm.cc  notes.md  rmsNorm.cc
cpu/pooling/: CMakeLists.txt  maxpooling.cc
cpu/quantization/: notes.md
cpu/reduce/: CMakeLists.txt  argmax.cc  max.cc  notes.md  softmax.cc  sum.cc
cpu/transpose_layout_transform/: notes.md
cuda/: CMakeLists.txt  README.md  cuda_ops.md
cuda/activation/: CMakeLists.txt
cuda/activation/src/: activation.cu
cuda/activation_elementwise/: CMakeLists.txt  notes.md
cuda/activation_elementwise/src/: activation_elementwise.cu
cuda/attention/: notes.md
cuda/attention/src/: flash_attention_like.cu  linear_attention.cu  standard_attention.cu
cuda/common/: CMakeLists.txt
cuda/common/include/: README.md
cuda/common/include/wgkernel/cuda/: error_check.hpp  timer.hpp
cuda/common/src/: README.md
cuda/convolution/: CMakeLists.txt  notes.md
cuda/convolution/src/: conv2d.cu  conv2d_common.cu  conv2d_direct_tiled.cu  conv2d_im2col_gemm.cu  conv2d_implicit_gemm.cu  conv2d_internal.cuh  conv2d_naive.cu
cuda/elementwise/: CMakeLists.txt
cuda/elementwise/src/: elementwise.cu
cuda/embedding_indexing/: CMakeLists.txt  notes.md
cuda/embedding_indexing/src/: indexing.cu
cuda/fused_ops/: notes.md
cuda/gemm/: notes.md
cuda/gemm/src/: README.md
cuda/gemv/: notes.md
cuda/layout/: CMakeLists.txt
cuda/layout/src/: layout.cu
cuda/norm/: CMakeLists.txt  notes.md
cuda/norm/src/: batchnorm.cu
cuda/pooling/: CMakeLists.txt  notes.md
cuda/pooling/src/: maxpool.cu
cuda/quantization/: notes.md
cuda/reduce/: CMakeLists.txt  notes.md
cuda/reduce/src/: argmax.cu  max.cu  sum.cu
cuda/resize/: CMakeLists.txt  notes.md
cuda/resize/src/: upsample.cu
cuda/transpose_layout_transform/: CMakeLists.txt  notes.md
cuda/transpose_layout_transform/src/: tensor_transform.cu
cutlass/: README.md
docs/: README.md  cpu_instruction_sets.md  cutlass.md  plan.md  questions.md  tensor_core.md
include/common/: README.md
include/cpu/: README.md  activation.hpp  attention.hpp  convolution.hpp  elementwise.hpp  embedding_indexing.hpp  gemm.hpp  norm.hpp  pooling.hpp  reduce.hpp
include/cuda/: README.md  activation.hpp  activation_elementwise.hpp  convolution.hpp  elementwise.hpp  embedding_indexing.hpp  pooling.hpp  reduce.hpp  resize.hpp
include/cutlass/: README.md
include/simd/: README.md
include/wgkernel/common/: README.md
include/wgkernel/cuda/: README.md  convolution.hpp  norm.hpp  transpose_layout_transform.hpp
metaX/: README.md
ncu/: README.md  ncu_guide.md
ncu/metric_sets/: README.md
ncu/notes/: README.md
ncu/reports/: README.md
ncu/scripts/: README.md  profile_reduce.sh
python/: CMakeLists.txt
python/bindings/: cpu_module.cpp  pybind_module.cpp
simd/: README.md
simd/activation/: README.md
simd/attention/: README.md
simd/convolution/: README.md
simd/elementwise/: README.md
simd/embedding_indexing/: README.md
simd/fused_ops/: README.md
simd/gemm/: README.md
simd/gemv/: README.md
simd/layout/: README.md
simd/norm/: README.md
simd/pooling/: README.md
simd/quantization/: README.md
simd/reduce/: README.md
tests/: CMakeLists.txt  README.md  test_utils.py
tests/correctness/: CMakeLists.txt  README.md
tests/correctness/cuda/: CMakeLists.txt  README.md  conv2d_tool.cu  reduce_tool.cu  test_conv2d_vs_pytorch.py  test_reduce_vs_pytorch.py
tests/cuda/: README.md  test_utils.py
tests/cuda/test_conv2d/scripts/: test_conv2d_vs_pytorch.py
tests/cuda/test_reduce/profiling/: reduce_performance_analysis.md
tests/cuda/test_reduce/scripts/: test_reduce_vs_pytorch.py
tests/test_activation/scripts/: test_activation.py
tests/test_attention/scripts/: test_attention.py
tests/test_conv2d/scripts/: test_conv2d.py
tests/test_elementwise/scripts/: test_elementwise.py
tests/test_embedding_indexing/scripts/: test_embedding_indexing.py
tests/test_gemm/scripts/: test_gemm.py
tests/test_norm/scripts/: test_norm.py
tests/test_pooling/scripts/: test_pooling.py
tests/test_reduce/profiling/: reduce_performance_analysis.md
tests/test_reduce/scripts/: test_reduce.py
tests/test_utils/: README.md
utils/: reduce_utils.cuh
